Fixed message display problem with white-spacing

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -151,6 +151,9 @@
 
 .email__plain-text {
   white-space: pre;
+  overflow: auto;
+  position: relative;
+  width: 100%;
 }
 
 .email__show-reply {
